<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navCalendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/calendar" />
        <item
            android:id="@+id/navGroups"
            android:icon="@drawable/ic_menu_groups"
            android:title="@string/groups" />
        <item
            android:id="@+id/navInvitations"
            android:icon="@drawable/ic_menu_invitations"
            android:title="@string/invitations" />
        <item
            android:id="@+id/navSettings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/navLogOut"
            android:icon="@drawable/ic_menu_log_out"
            android:title="@string/log_out" />
    </group>
</menu>